[gd_scene load_steps=2 format=3 uid="uid://victory"]

[ext_resource type="Script" path="res://scripts/ui/victory_screen.gd" id="1_script"]

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.08, 0.05, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.2, 0.8, 0.4, 1)
text = "VICTORY"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.7, 0.5, 1)
text = "The sector is secured!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Difficulty: Normal"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Time: 00:00"
horizontal_alignment = 1

[node name="StationsLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Stations Defended: 0"
horizontal_alignment = 1

[node name="PerfectLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Perfect Defenses: 0"
horizontal_alignment = 1

[node name="EnemiesLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="CrewsLostLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Crews Lost: 0"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "NEW RUN"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "MAIN MENU"
